# in2012-ws3-allreduce

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
